# context-priming

./: README.md  pyproject.toml  test_full_pipeline.py
context_prime/: __init__.py  __main__.py  cli.py
context_prime/adapters/: __init__.py  claude_hook.sh  claude_sdk.py  raw_api.py
context_prime/core/: __init__.py  gather.py  hierarchy.py  score.py  synthesize.py
prototype/: README.md  prime_agent.py  requirements.txt
prototype/example_memories/: MEMORY.md
whitepaper/: context-priming-whitepaper.md  context-priming-whitepaper.typ
